# herm_ws

./: .gitignore  ERRORS.md  README.md  REMOTE.md  frames_2025-12-05_07.48.33.gv  frames_2025-12-23_23.47.58.gv  herm.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/herm_description/share/herm_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/herm_description/share/herm_description/launch/: display.launch.py
install/herm_description/share/herm_description/urdf/: herm.urdf.xacro
log/: latest_build
src/herm_bringup/: CMakeLists.txt  package.xml
src/herm_bringup/config/: herm_params.yaml  nav2_params.yaml  navigation.rviz  sensors.rviz  slam.rviz  slam_toolbox.yaml
src/herm_bringup/launch/: bringup.launch.py  l298n_simple.launch.py  l298n_xbox.launch.py  navigation.launch.py  odom_test.launch.py  sensors_test.launch.py  slam_test.launch.py  teleop.launch.py  teleop_joy.launch.py  xbox_motor_test.launch.py  xbox_test.launch.py
src/herm_bringup/scripts/: bno055_imu_node.py  camera_node.py  hiwonder_driver.py  l298n_driver.py  mpu_imu_driver.py  odom_test_node.py  xbox_motor_test.py  xbox_test_node.py
src/herm_description/: setup.cfg  setup.py
src/herm_description/launch/: display.launch.py
src/herm_description/urdf/: herm.urdf.xacro
src/herm_simulation/: CMakeLists.txt  README.md  package.xml
src/herm_simulation/config/: nav2_params.yaml  navigation.rviz  simulation.rviz  slam.rviz  slam_toolbox_params.yaml  xbox_teleop.yaml
src/herm_simulation/launch/: navigation.launch.py  simulation.launch.py  slam.launch.py  slam_navigation.launch.py  teleop_joy.launch.py  teleop_sim.launch.py
src/herm_simulation/urdf/: herm_gazebo.urdf.xacro
src/herm_simulation/worlds/: herm_world.sdf  herm_world.world
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/herm_description/share/herm_description/: package.dsv  package.ps1  package.sh
src/log/: latest_build
